# flowsensor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  diffconfig  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s2  sdkconfig.esp32dev  sdkconfig.m5stack_coreS3  sdkconfig.m5stack_coreS3.old  sdkconfig.m5stack_coreS3_counter.old  sdkconfig.m5stack_coreS3_quadrature  sdkconfig.m5stack_coreS3_quadrature.old  sdkconfig.m5stack_coreS3_quadrature_ble5_ads  sdkconfig.m5stack_coreS3_quadrature_jtag  sdkconfig.stamp-s3  sdkconfig.stamp_c3_quadrature  sdkconfig.stamp_c3u_quadrature  sdkconfig.stamp_s3  sdkconfig.stamp_s3_ble4  sdkconfig.stamp_s3_counter  sdkconfig.stamp_s3_quadrature
boards/: esp32_s3_wroom_1_n8r8.json  m5stack-coreS3-mah-fixed.json  m5stack-coreS3-mah.json  m5stack-stamps3-mah.json  m5stamp-c3-custom.json
components/: README
components/custom-header/: CMakeLists.txt  Kconfig  my-header.c
components/custom-header/include/: my-header.h
regression/: mVtopressure.py  pressure.csv
simulator/: stubs.cpp  stubs.hpp
squareline-ui/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
src/: CMakeLists.txt  FlowSensor.h  Kconfig.projbuild  QuadratureDecoder.h  beacon.cpp  beacon.h  calibrate.cpp  defs.h  lv_setup.cpp  main.cpp  src.cpp  tsl2591.cpp  ui_update.cpp
src/config/: config.sample.h  pins.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/fonts/: ui_font_Font2.c
src/ui/screens/: ui_Main.c
test/: blink.cpp  tests.cpp
untracked/: test-ble5.json
(+4 files in other folders)
